// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot — diff preview > creation banner 1`] = `
"[bold][green]+ Created[/color][/intensity]: src/foo.mjs
[cyan]@@ -0,0 +1,2 @@[/color]
[green]+export const foo = 1;[/color]
[green]+export const bar = 2;[/color]
"
`;

exports[`snapshot — diff preview > modification with mixed adds + removes 1`] = `
"[bold][yellow]~ Modified[/color][/intensity]: src/bar.mjs
[cyan]@@ -1,4 +1,4 @@[/color]
[dim] a[/intensity]
[dim] b[/intensity]
[red]-old[/color]
[green]+new[/color]
[dim] d[/intensity]
"
`;

exports[`snapshot — markdown rendering > re-opens a wrapped link on each row so padding never becomes clickable 1`] = `
"Prefix text here [link=https://example.com/some/deep/path][underline][cyan]a very long link label[/link]
[link=https://example.com/some/deep/path]that will certainly wrap[/color][/underline][/link]
[link=https://example.com/some/deep/path][dim](https://example.com/some/deep/path)[/intensity][/link]
tail.

"
`;

exports[`snapshot — markdown rendering > renders a fenced code block — no colour 1`] = `
"--- code (ts)
  function foo(): number {
    return 1;
  }
---

"
`;

exports[`snapshot — markdown rendering > renders a multi-column table 1`] = `
"┌───────┬─────┐
│ [bold]name [/intensity] │ [bold]age[/intensity] │
├───────┼─────┤
│ ada   │ 36  │
│ grace │ 85  │
└───────┴─────┘
"
`;

exports[`snapshot — markdown rendering > renders a tutorial document 1`] = `
"[bold][accentStrong]Heading One[/color][/intensity]

Some intro text with [bold]bold[/intensity] and [italic]italic[/italic] and [accent]inline code[/color].

[bold][accent]Subsection[/color][/intensity]

[cyan]•[/color] bullet alpha
[cyan]•[/color] bullet beta

[cyan]1.[/color] step one
[cyan]2.[/color] step two

[dim]┌─ code (js)[/intensity]
[dim]│[/intensity] const x = 1;
[dim]└──[/intensity]

[underline][cyan]link text[/color][/underline] [dim](https://example.com)[/intensity] closes it.

"
`;

exports[`snapshot — markdown rendering > renders strikethrough and links — no colour (markers kept, no escapes) 1`] = `
"~~打ち消し~~ と See docs (https://example.com/docs) for
more.

Mixed ~~**struck bold**~~ and **~~bold struck~~**.

[✓] ~~done~~ with link (https://example.com/l)

bad (javascript:alert(1)) and f (file:///etc/passwd) stay
plain.

"
`;

exports[`snapshot — markdown rendering > renders strikethrough and links — terminal with OSC 8 support 1`] = `
"[dim][strike]打ち消し[/strike][/intensity] と See [link=https://example.com/docs][underline][cyan]docs[/color][/underline] [dim](https://example.com/docs)[/intensity][/link] for more.

Mixed [dim][strike][bold]struck bold[dim][/strike][/intensity] and [bold][dim][strike]bold struck[/strike][/intensity][/intensity].

[success][✓][/color] [dim][strike]done[/strike][/intensity] with [link=https://example.com/l][underline][cyan]link[/color][/underline] [dim](https://example.com/l)[/intensity][/link]

[underline][cyan]bad[/color][/underline] [dim](javascript:alert(1)[/intensity]) and [underline][cyan]f[/color][/underline] [dim](file:///etc/passwd)[/intensity] stay
plain.

"
`;

exports[`snapshot — markdown rendering > renders strikethrough and links — terminal without OSC 8 support 1`] = `
"[dim][strike]打ち消し[/strike][/intensity] と See [underline][cyan]docs[/color][/underline] [dim](https://example.com/docs)[/intensity] for more.

Mixed [dim][strike][bold]struck bold[dim][/strike][/intensity] and [bold][dim][strike]bold struck[/strike][/intensity][/intensity].

[success][✓][/color] [dim][strike]done[/strike][/intensity] with [underline][cyan]link[/color][/underline] [dim](https://example.com/l)[/intensity]

[underline][cyan]bad[/color][/underline] [dim](javascript:alert(1)[/intensity]) and [underline][cyan]f[/color][/underline] [dim](file:///etc/passwd)[/intensity] stay
plain.

"
`;

exports[`snapshot — tool renderer > collapsed run_shell summary 1`] = `
"[success]✓[/color] [accent][bold]run_shell[/intensity][/color][muted](command="pnpm test")[/color]
  tests 185 passed
  Test Files 47 passed
  Tests 185 passed
  [muted]… (2 more lines)[/color]
"
`;

exports[`snapshot — tool renderer > read_file body 1`] = `
"[success]✓[/color] [accent][bold]read_file[/intensity][/color][muted](path=README.md)[/color]
  Read 1.2 KB from README.md
  # project
  
  hello world
"
`;
